add unsafe utility class